package com.android.mySwissDorm.ui.homepage

import android.net.Uri
import android.widget.Toast
import androidx.compose.foundation.border
import androidx.compose.foundation.clickable
import androidx.compose.foundation.layout.Box
import androidx.compose.foundation.layout.Column
import androidx.compose.foundation.layout.Spacer
import androidx.compose.foundation.layout.fillMaxSize
import androidx.compose.foundation.layout.fillMaxWidth
import androidx.compose.foundation.layout.height
import androidx.compose.foundation.layout.padding
import androidx.compose.foundation.layout.size
import androidx.compose.foundation.layout.width
import androidx.compose.foundation.layout.wrapContentHeight
import androidx.compose.foundation.lazy.LazyColumn
import androidx.compose.foundation.lazy.LazyListState
import androidx.compose.foundation.shape.RoundedCornerShape
import androidx.compose.material.icons.Icons
import androidx.compose.material.icons.filled.Place
import androidx.compose.material.icons.filled.Search
import androidx.compose.material3.Card
import androidx.compose.material3.ExperimentalMaterial3Api
import androidx.compose.material3.Icon
import androidx.compose.material3.Scaffold
import androidx.compose.material3.Text
import androidx.compose.material3.TextButton
import androidx.compose.material3.TextField
import androidx.compose.material3.TextFieldDefaults
import androidx.compose.runtime.Composable
import androidx.compose.runtime.LaunchedEffect
import androidx.compose.runtime.collectAsState
import androidx.compose.runtime.getValue
import androidx.compose.runtime.mutableStateOf
import androidx.compose.runtime.remember
import androidx.compose.runtime.setValue
import androidx.compose.ui.Alignment
import androidx.compose.ui.Modifier
import androidx.compose.ui.layout.ContentScale
import androidx.compose.ui.platform.LocalContext
import androidx.compose.ui.platform.testTag
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.text.font.FontWeight
import androidx.compose.ui.unit.sp
import androidx.lifecycle.viewmodel.compose.viewModel
import coil.compose.AsyncImage
import com.android.mySwissDorm.R
import com.android.mySwissDorm.model.city.City
import com.android.mySwissDorm.model.map.Location
import com.android.mySwissDorm.ui.navigation.BottomNavigationMenu
import com.android.mySwissDorm.ui.navigation.NavigationActions
import com.android.mySwissDorm.ui.navigation.Screen
import com.android.mySwissDorm.ui.theme.BackGroundColor
import com.android.mySwissDorm.ui.theme.Dimens
import com.android.mySwissDorm.ui.theme.MainColor
import com.android.mySwissDorm.ui.theme.TextColor
import com.android.mySwissDorm.ui.utils.CustomLocationDialog
import com.android.mySwissDorm.ui.utils.onUserLocationClickFunc

/** Test tags for the Home Page screen, used for UI testing. */
object HomePageScreenTestTags {
  const val SEARCH_BAR = "searchBar"
  const val SEARCH_BAR_TEXT_FIELD = "searchBarTextField"
  const val CITIES_LIST = "citiesList"
  const val LOCATION_SELECTION = "homePageLocationSelection"

  fun getTestTagForCityCard(cityName: String): String = "cityCard${cityName}"

  fun getTestTagForCityCardTitle(cityName: String): String = "cityCardTitle${cityName}"

  fun getTestTagForCityCardDescription(cityName: String): String = "cityCardDescription${cityName}"
}

object HomePageScreenSizes {
  val CITY_IMAGE_HEIGHT = Dimens.ImageSizeLarge
}

/**
 * The main screen for the home page, displaying a list of cities and a search bar.
 *
 * @param homePageViewModel The ViewModel for this screen.
 * @param onSelectLocation A callback for when a city or custom location is selected.
 * @param navigationActions Actions for navigating to other screens.
 */
@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun HomePageScreen(
    homePageViewModel: HomePageViewModel = viewModel(),
    onSelectLocation: (Location) -> Unit = {},
    navigationActions: NavigationActions? = null
) {
  val uiState by homePageViewModel.uiState.collectAsState()
  val context = LocalContext.current
  val lazyState = LazyListState()
  val onUseCurrentLocationClick = onUserLocationClickFunc(context, homePageViewModel)

  LaunchedEffect(uiState.errorMsg) {
    uiState.errorMsg?.let { message -> Toast.makeText(context, message, Toast.LENGTH_LONG).show() }
  }

  Scaffold(
      bottomBar = {
        BottomNavigationMenu(
            selectedScreen = Screen.Homepage, onTabSelected = { navigationActions?.navigateTo(it) })
      }) { paddingValues ->
        var inputText by remember { mutableStateOf("") }
        Column(modifier = Modifier.padding(paddingValues).fillMaxSize()) {
          Box(
              modifier =
                  Modifier.testTag(HomePageScreenTestTags.SEARCH_BAR)
                      .fillMaxWidth()
                      .wrapContentHeight(),
              contentAlignment = Alignment.Center) {
                TextField(
                    modifier =
                        Modifier.testTag(HomePageScreenTestTags.SEARCH_BAR_TEXT_FIELD)
                            .fillMaxWidth()
                            .padding(
                                vertical = Dimens.PaddingSmall,
                                horizontal = Dimens.PaddingHorizontalLarge)
                            .border(
                                Dimens.BorderWidthXSmall,
                                TextColor,
                                RoundedCornerShape(Dimens.CornerRadiusLarge)),
                    value = inputText,
                    onValueChange = { inputText = it },
                    placeholder = {
                      Text(stringResource(R.string.browse_cities), fontSize = 18.sp)
                    },
                    leadingIcon = {
                      Icon(
                          Icons.Default.Search,
                          modifier = Modifier.size(Dimens.IconSizeXXLarge),
                          contentDescription = "Search",
                          tint = MainColor)
                    },
                    singleLine = true,
                    colors =
                        TextFieldDefaults.colors(
                            unfocusedContainerColor = BackGroundColor,
                            focusedContainerColor = BackGroundColor,
                            unfocusedIndicatorColor = BackGroundColor,
                            focusedIndicatorColor = BackGroundColor))
              }

          TextButton(
              onClick = { homePageViewModel.onCustomLocationClick() },
              modifier =
                  Modifier.align(Alignment.CenterHorizontally)
                      .testTag(HomePageScreenTestTags.LOCATION_SELECTION)) {
                Icon(
                    imageVector = Icons.Default.Place,
                    contentDescription = "Custom Location",
                    tint = MainColor)
                Spacer(modifier = Modifier.width(Dimens.SpacingXSmall))
                Text(text = stringResource(R.string.custom_location), color = MainColor)
              }

          LazyColumn(
              modifier =
                  Modifier.testTag(HomePageScreenTestTags.CITIES_LIST)
                      .fillMaxWidth()
                      .padding(horizontal = Dimens.PaddingHorizontalLarge)
                      .padding(top = Dimens.PaddingTopSmall),
              state = lazyState) {
                items(uiState.cities.size) { index ->
                  val city = uiState.cities[index]
                  if (city.name.contains(inputText, ignoreCase = true) ||
                      city.description.contains(inputText, ignoreCase = true)) {
                    CityCard(
                        city = city,
                        onClick = {
                          val cityLocation = city.location
                          homePageViewModel.saveLocationToProfile(cityLocation)
                          onSelectLocation(cityLocation)
                        },
                        uri = uiState.cityImageMap[city])
                    Spacer(modifier = Modifier.height(Dimens.SpacingXLarge))
                  }
                }
              }
        }

        if (uiState.showCustomLocationDialog) {
          val onValueChange =
              remember<(String) -> Unit> {
                { query -> homePageViewModel.setCustomLocationQuery(query) }
              }
          val onDropDownLocationSelect =
              remember<(Location) -> Unit> {
                { location -> homePageViewModel.setCustomLocation(location) }
              }
          val onDismiss = remember { { homePageViewModel.dismissCustomLocationDialog() } }
          val onConfirm =
              remember<(Location) -> Unit> {
                { location ->
                  homePageViewModel.saveLocationToProfile(location)
                  onSelectLocation(location)
                  homePageViewModel.dismissCustomLocationDialog()
                }
              }

          CustomLocationDialog(
              value = uiState.customLocationQuery,
              currentLocation = uiState.customLocation,
              locationSuggestions = uiState.locationSuggestions,
              onValueChange = onValueChange,
              onDropDownLocationSelect = onDropDownLocationSelect,
              onDismiss = onDismiss,
              onConfirm = onConfirm,
              onUseCurrentLocationClick = onUseCurrentLocationClick)
        }
      }
}

/**
 * A card that displays information about a city.
 *
 * @param city The city to display.
 * @param onClick A callback for when the card is clicked.
 */
@Composable
fun CityCard(city: City, onClick: () -> Unit, uri: Uri? = null) {
  Card(
      modifier =
          Modifier.testTag(HomePageScreenTestTags.getTestTagForCityCard(city.name))
              .fillMaxWidth()
              .padding(vertical = Dimens.PaddingMedium)
              .border(
                  Dimens.BorderWidthXSmall,
                  TextColor,
                  RoundedCornerShape(Dimens.CornerRadiusDefault))
              .clickable { onClick() },
  ) {
    Box {
      AsyncImage(
          model = uri,
          contentDescription = city.name,
          contentScale = ContentScale.Crop,
          modifier = Modifier.fillMaxWidth().height(HomePageScreenSizes.CITY_IMAGE_HEIGHT))
      Column(
          modifier =
              Modifier.fillMaxWidth().align(Alignment.TopStart).padding(Dimens.PaddingSmall)) {
            Text(
                modifier =
                    Modifier.testTag(HomePageScreenTestTags.getTestTagForCityCardTitle(city.name)),
                text = city.name,
                color = TextColor,
                fontWeight = FontWeight.Black,
                fontSize = 20.sp)
            Spacer(modifier = Modifier.height(Dimens.SpacingDefault))
            Text(
                modifier =
                    Modifier.testTag(
                        HomePageScreenTestTags.getTestTagForCityCardDescription(city.name)),
                text = city.description,
                color = TextColor,
                fontSize = 12.sp)
          }
    }
  }
}
